criação de forms

--- a/config.yml
+++ b/config.yml
@@ -19,6 +19,7 @@ pipeline:
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-- name: MemoizationPolicy
-  max_history: 1
-- name: MappingPolicy
+  - name: MemoizationPolicy
+  - name: KerasPolicy
+  - name: MappingPolicy
+  - name: FormPolicy
