--- a/domain.yml
+++ b/domain.yml
@@ -3,6 +3,16 @@ intents:
   - bye
   - thank
   - faq
+  - contact_sales
+  - inform
+
+entities:
+  - company
+  - job_function
+  - person_name
+  - budget
+  - business_email
+  - use_case
 
 actions:
   - respond_faq
@@ -16,6 +26,46 @@ responses:
 
   utter_bye:
     - text: Bye!
+
+  utter_ask_business_email:
+  - text: What's your business email?
+
+  utter_ask_company:
+    - text: What company do you work for?
+
+  utter_ask_budget:
+    - text: "What's your annual budget for conversational AI? 💸"
+
+  utter_ask_job_function:
+    - text: "What's your job? 🕴"
+
+  utter_ask_person_name:
+    - text: What's your name?
+
+  utter_ask_use_case:
+    - text: What's your use case?
+
+slots:
+  company:
+    type: unfeaturized
+
+  job_function:
+    type: unfeaturized
+
+  person_name:
+    type: unfeaturized
+
+  budget:
+    type: unfeaturized
+
+  business_email:
+    type: unfeaturized
+
+  use_case:
+    type: unfeaturized
+  
+forms:
+  - sales_form
 
 session_config:
   session_expiration_time: 60
