--- a/domain.yml
+++ b/domain.yml
@@ -1,10 +1,12 @@
 intents:
-  - greet
+  - greet: {triggers: action_greet}
   - bye
   - thank
   - faq
   - contact_sales
   - inform
+  - explain
+  - out_of_scope
 
 entities:
   - company
@@ -16,6 +18,7 @@ entities:
 
 actions:
   - respond_faq
+  - action_greet
 
 responses:
   utter_noworries:
@@ -44,6 +47,15 @@ responses:
 
   utter_ask_use_case:
     - text: What's your use case?
+  
+  utter_explain_why_budget:
+  - text: We need to know your budget to recommend a subscription
+
+  utter_explain_why_email:
+  - text: We need your email so we can contact you
+
+  utter_out_of_scope:
+  - text: Sorry, I can’t handle that request.
 
 slots:
   company:
@@ -63,6 +75,16 @@ slots:
 
   use_case:
     type: unfeaturized
+
+  requested_slot:
+    type: categorical
+    values:
+      - business_email
+      - company
+      - person_name
+      - use_case
+      - budget
+      - job_function
   
 forms:
   - sales_form
