conexão do bot com telegram

--- a/credentials.yml
+++ b/credentials.yml
@@ -6,6 +6,11 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
+telegram:
+  access_token: "1247548046:AAF_LdyYF_t9_MNIl3WjBfzFPN4ouhLdv2k"
+  verify: "RasaAssistantTestBot"
+  webhook_url: "https://75e1a181e624.ngrok.io/webhooks/telegram/webhook"
+
 
 #facebook:
 #  verify: "<verify>"
